--- a/assets/frontview/css/styleme.css
+++ b/assets/frontview/css/styleme.css
@@ -291,3 +291,12 @@ body{
     width: 280px;
     border-top-right-radius: 10px;
 }
+
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    color: #495057;
+    border-bottom: 2px solid #000000 !important;
+    border-color: #fff;
+    background-color: #fff;
+}
+
