css mobile first

--- a/assets/frontview/css/styleme.css
+++ b/assets/frontview/css/styleme.css
@@ -209,6 +209,10 @@ body{
       display: none;
   }
 
+  #wafloats{
+      display: none;
+  }
+
   @media (min-width: 320px) and (max-width: 480px) {
     .carousel-caption{
         display: none;
