--- a/assets/frontview/css/styleme.css
+++ b/assets/frontview/css/styleme.css
@@ -168,7 +168,7 @@ body{
 
 .section_four_two{
     padding-top: 0px;
-    padding-bottom: 10px;
+    padding-bottom: 40px;
     background : #ffffff !important;
 }
 
@@ -221,6 +221,7 @@ body{
 }
 
   @media (min-width: 320px) and (max-width: 480px) {
+   
     .upload_component{
         padding-top: 30px !important;
         position: relative;
@@ -283,7 +284,7 @@ body{
     }
 
     .search_inputs{
-        width: 86.5%;
+        width: 80.5% !important; 
     }
 
     .infobar {
