--- a/assets/frontview/css/styleme.css
+++ b/assets/frontview/css/styleme.css
@@ -17,9 +17,9 @@ body{
 .section_footer{
     padding-top:50px;
     padding-bottom:30px;
-    background:#fafafa;
-    border-top:1px solid #f1f1f1;
-    border-bottom:1px solid #f1f1f1;
+    background:#f4f4f4;
+    border-top:1px solid #f2f2f2;
+    border-bottom:1px solid #f2f2f2;
 }
 
 .logo_main{
