--- a/assets/frontview/css/styleme.css
+++ b/assets/frontview/css/styleme.css
@@ -450,3 +450,9 @@ body{
 .easyimage-full > img{
     width : 100% !important;
 }
+
+.card{
+    background: #FFFFFF !important;
+    border: 1px solid #E1E7F1 !important;
+    box-shadow: 0px 1px 2px rgba(0, 23, 68, 0.09) !important;
+}
