--- a/assets/frontview/css/styleme.css
+++ b/assets/frontview/css/styleme.css
@@ -35,6 +35,7 @@ body{
     padding-bottom:5px;
     /* background :  #2d527c !important; */
     background :  #278c55 !important;
+    font-weight: bold;
 }
 
 .infobar {
@@ -175,6 +176,11 @@ body{
 
 .section_two_head{
     color: #ffffff;
+    font-weight: bold;
+}
+
+.section_three_head{
+    font-weight: bold;
 }
 
 .blog_head{
@@ -456,3 +462,4 @@ body{
     border: 1px solid #E1E7F1 !important;
     box-shadow: 0px 1px 2px rgba(0, 23, 68, 0.09) !important;
 }
+
