update logo and assets

--- a/assets/frontview/css/styleme.css
+++ b/assets/frontview/css/styleme.css
@@ -4,10 +4,11 @@
 }
 
 .imgslider{
-    height: 900px;
+    height: 500px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
+    object-fit: cover;
 }
 
 body{
